feat: ChatGPT 이미지 생성 기능 구현 및 일부 API 응답 형식 수정